deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-test-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # Ensure this matches your ingress controller
  rules:
    - host: my-test-server.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-test-server
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-test-server
spec:
  selector:
    app: my-test-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer  # This service will be exposed via Ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: my-test-server
  name: my-test-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-test-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: my-test-server
    spec:
      containers:
      - image: prateekjoshi2013/my-test-server:latest
        imagePullPolicy: Always
        name: my-test-server
